--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://zacklacanna.dev
 title: Zack LaCanna
-email: zacklacanna23@gmail.com
+email: <a href="mailto:zacklacanna23@gmail.com">zacklacanna23@gmail.com</a>
 author: Zack LaCanna
 description: >  
   Here you can see previous projects I have contributed on over the course of my Computer Science journey.
