--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
-    url: https://twitter.com/SBootstrap
   - title: github
     url: https://github.com/zacklacanna
   - title: linkedin
     url: https://linkedin.com/in/zacklacanna
+  - title: email
+    url: mailto:zacklacanna23@gmail.com
