--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,5 @@ social:
     url: https://linkedin.com/in/zacklacanna
   - title: email
     url: mailto:mindee@lacanna.net
+  - title: instagram
+    url: https://www.instagram.com/mindeerosen
