--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Mindee Rosen
 email: <a href="mailto:mindee@lacanna.net">mindee@lacanna.net</a>
 author: Zack LaCanna
 description: >  
-  Coaching women to infinite possibilites with spiritual health, prosperity, and wealth changes. 
+  Coaching women to infinite possibilites with spiritual health, prosperity, and wealth changes! 
   
 # ----------------------- #
 #    Jekyll & Plugins     #
